methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:3: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime8.MethodsPictureLarge'
override def run() {
             ^