methods.picture.MethodsPictureLarge.scala.code
override def run() {
}
override def run() {
  for(m<-1 to 9 ){
    faireLigne()
}
}

def faireV(c:Color){
     avance()
     setCouleurBrosse(c)
     baisseBrosse()
     gauche()
     leveBrosse()
     avance()
     droite()
     avance()
     baisseBrosse()
     leveBrosse()
     droite()
     avance()
     gauche()
     avance()
     baisseBrosse()
     leveBrosse()
     avance()
     gauche()
}

def faireMotif(){
  faireV(Color.YELLOW)
  faireV(Color.RED)
  faireV(Color.BLUE)
  faireV(Color.GREEN)
}

def faireLigne(){
  for (i <-1 to 8 ){ 
    faireMotif()
    avance(5)
  }
    faireMotif()
    droite()
    recule(5)
    gauche()
    recule(40)
  
  }